# valuefunctionethics

./: .gitignore  CLAUDE.md  LICENSE  README  README.md  pyproject.toml
docs/: design_notes.md  maqasid_proxies.md  spec.md
experiments/: hello_run.py
src/valuefunctionethics/: __init__.py
src/valuefunctionethics/agents/: __init__.py
src/valuefunctionethics/envs/: __init__.py
src/valuefunctionethics/rewards/: __init__.py  maqasid.py
src/valuefunctionethics/utils/: __init__.py
tests/: test_rewards.py  test_scaffold.py
