[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "valuefunctionethics"
version = "0.1.0"
description = "Maqasid al-Shari'ah-inspired value function as an ethicality proxy for RL agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "stable-baselines3>=2.3",
    "torch>=2.2",         # CPU build; see install note in README
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.package-dir]
"" = "src"
